--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/eduardamirelly/nlw-eSports-server#readme",
   "dependencies": {
+    "@prisma/client": "^4.9.0",
     "express": "^4.18.1"
   },
   "devDependencies": {
@@ -33,6 +34,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
+    "prisma": "^4.9.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   }
