--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "homepage": "https://github.com/eduardamirelly/nlw-eSports-server#readme",
   "dependencies": {
     "@prisma/client": "^4.9.0",
+    "cors": "^2.8.5",
     "express": "^4.18.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.13",
     "@types/node": "^18.7.16",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
